[gd_scene load_steps=7 format=2]

[ext_resource path="res://Common/Player/UsableItems/FishingRod/FishingRod.png" type="Texture" id=1]
[ext_resource path="res://Common/Player/UsableItems/FishingRod/FishingRodV2/FishingRod.gd" type="Script" id=2]
[ext_resource path="res://Common/Player/UsableItems/FishingRod/FishingRodV2/FishingHook/FishingHook.tscn" type="PackedScene" id=3]
[ext_resource path="res://Common/Player/UsableItems/FishingRod/FishingRodV2/States/Unhooked.gd" type="Script" id=4]
[ext_resource path="res://Common/Player/UsableItems/FishingRod/FishingRodV2/States/HookedSolid.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 1 )

[node name="FishingRod" type="Node2D"]
script = ExtResource( 2 )
hook_scene = ExtResource( 3 )

[node name="RodStates" type="Node" parent="."]

[node name="Unhooked" type="Node" parent="RodStates"]
script = ExtResource( 4 )

[node name="HookedSolid" type="Node" parent="RodStates"]
script = ExtResource( 5 )

[node name="PivotPoint" type="Position2D" parent="."]

[node name="AnimationPivot" type="Position2D" parent="PivotPoint"]

[node name="Sprite" type="Sprite" parent="PivotPoint/AnimationPivot"]
rotation = 1.5708
texture = ExtResource( 1 )
centered = false
offset = Vector2( -1, -53 )

[node name="HookPoint" type="Position2D" parent="PivotPoint/AnimationPivot"]
position = Vector2( 38, 0 )

[node name="RodHitBox" type="Area2D" parent="PivotPoint"]
position = Vector2( 22, 0 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PivotPoint/RodHitBox"]
shape = SubResource( 1 )
